# checkraw

./: .gitmodules  CMakeLists.txt  README.txt
include/checkraw/: bitbang.h  errors.h
include/checkraw/drivers/: bitbang-sunxi.h
notes/: A20-Olinuxino.txt  Layers.txt  SPI.txt
src/: CMakeLists.txt  bitbang-driver.h  bitbang.c  errors.c
src/drivers/: CMakeLists.txt  bitbang-sunxi-tools.c  bitbang-sunxi.c
test/: test-bitbang-sunxi.c  test-common.h
